--- a/trunk/IntraSell_Net/MagentoSync/App.config
+++ b/trunk/IntraSell_Net/MagentoSync/App.config
@@ -20,37 +20,26 @@
             </basicHttpBinding>
         </bindings>
         <client>
-          
+          <!--
             <endpoint address="http://87.106.5.25:82/magento/index.php/api/v2_soap/index/"
                 binding="basicHttpBinding" bindingConfiguration="Mage_Api_Model_Server_V2_HandlerBinding"
                 contract="MagentoSyncService.Mage_Api_Model_Server_V2_HandlerPortType"
                 name="Mage_Api_Model_Server_V2_HandlerPort" />
-          <!--
+         
           <endpoint address="http://prospro.gostorego.com/index.php/api/v2_soap/index/"
                          binding="basicHttpBinding" bindingConfiguration="Mage_Api_Model_Server_V2_HandlerBinding"
                          contract="MagentoSyncService.Mage_Api_Model_Server_V2_HandlerPortType"
                          name="Mage_Api_Model_Server_V2_HandlerPort" />
           -->
-          
+
+          <endpoint address="http://prospro-testserver.de.dedi3692.your-server.de/index.php/api/v2_soap/index/"
+               binding="basicHttpBinding" bindingConfiguration="Mage_Api_Model_Server_V2_HandlerBinding"
+               contract="MagentoSyncService.Mage_Api_Model_Server_V2_HandlerPortType"
+               name="Mage_Api_Model_Server_V2_HandlerPort" />
         </client>
     </system.serviceModel>
     <userSettings>
         <MagentoSync.My.MySettings>
-         
-            <setting name="Magento_username" serializeAs="String">
-                <value>root</value>
-            </setting>
-            <setting name="Magento_password" serializeAs="String">
-                <value>Mama123123</value>
-            </setting>
-          <!-- 
-          <setting name="Magento_username" serializeAs="String">
-            <value>GrigorTonkov</value>
-          </setting>
-          <setting name="Magento_password" serializeAs="String">
-            <value>Tatko123123</value>
-          </setting>
-           -->
             <setting name="MandantNr" serializeAs="String">
                 <value>2</value>
             </setting>
@@ -74,6 +63,15 @@
             </setting>
             <setting name="Magento_product_visibility" serializeAs="String">
                 <value>4</value>
+            </setting>
+            <setting name="Magento_username" serializeAs="String">
+                <value>gtonkov</value>
+            </setting>
+            <setting name="Magento_password" serializeAs="String">
+                <value>abc123456</value>
+            </setting>
+            <setting name="Magento_product_storeview" serializeAs="String">
+                <value>de</value>
             </setting>
         </MagentoSync.My.MySettings>
     </userSettings>
