--- a/IntraSell_Net/IntraSell_Net/IntraSell_Net.vbproj
+++ b/IntraSell_Net/IntraSell_Net/IntraSell_Net.vbproj
@@ -33,7 +33,7 @@
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <DefineDebug>true</DefineDebug>
@@ -429,7 +429,12 @@
     <Compile Include="Forms\VorgaengeBar\VorgangBar.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Modules\ModuleBuchVorgangForm.vb" />
+    <Compile Include="Forms\Vorgaenge\AbstractVorgangForm.Designer.vb">
+      <DependentUpon>AbstractVorgangForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Vorgaenge\AbstractVorgangForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Forms\Vorgaenge\VorgangBedingungen.Designer.vb">
       <DependentUpon>VorgangBedingungen.vb</DependentUpon>
     </Compile>
