--- a/trunk/IntraSell_Net/MagentoSync/App.config
+++ b/trunk/IntraSell_Net/MagentoSync/App.config
@@ -16,7 +16,7 @@
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="Mage_Api_Model_Server_V2_HandlerBinding" />
+                <binding name="Mage_Api_Model_Server_V2_HandlerBinding" maxReceivedMessageSize = "1000000" />
             </basicHttpBinding>
         </bindings>
         <client>
@@ -30,12 +30,17 @@
                 binding="basicHttpBinding" bindingConfiguration="Mage_Api_Model_Server_V2_HandlerBinding"
                 contract="MagentoSyncService.Mage_Api_Model_Server_V2_HandlerPortType"
                 name="Mage_Api_Model_Server_V2_HandlerPort" />
-          -->
+   
 
           <endpoint address="http://prospro-testserver.de.dedi3692.your-server.de/index.php/api/v2_soap/index/"
                binding="basicHttpBinding" bindingConfiguration="Mage_Api_Model_Server_V2_HandlerBinding"
                contract="MagentoSyncService.Mage_Api_Model_Server_V2_HandlerPortType"
                name="Mage_Api_Model_Server_V2_HandlerPort" />
+       -->
+          <endpoint address="http://www.prospro-tennisversand.com/index.php/api/v2_soap/index/"
+         binding="basicHttpBinding" bindingConfiguration="Mage_Api_Model_Server_V2_HandlerBinding"
+         contract="MagentoSyncService.Mage_Api_Model_Server_V2_HandlerPortType"
+         name="Mage_Api_Model_Server_V2_HandlerPort" />
         </client>
     </system.serviceModel>
     <userSettings>
@@ -50,7 +55,7 @@
                 <value>z:\Business\IntraSell_System\IntraSell_WebShop_2008\WebShop_2008\productImages_Large\</value>
             </setting>
             <setting name="SyncFolder" serializeAs="String">
-                <value>Z:\Business\IntraSell_System\IntraSell_Net\MagentoSync\bin\Debug\</value>
+                <value>d:\tmp\MagentoSync\bin\Debug\</value>
             </setting>
             <setting name="SyncIntervalSeconds" serializeAs="String">
                 <value>300</value>
